# CropWise

./: .replit  app.py  config.py  crop_model.pkl  crop_recommender.pkl  crop_recommender.py  farming_calendar.json  iot_dashboard.py  main.py  mandi_locator.py  market_prices.json  models.py  pest_detection_image.py  pest_disease_database.json  pest_disease_detector.py  pyproject.toml  replit.nix  scaler.pkl  simple_app.py  simple_crop_recommender.py  weather_service.py
attached_assets/: Pasted-Advanced-Features-to-Add-Tailored-for-Indian-Farming-Agri-Tech-Tools-Satellite-based-Crop-Health-1747979089097.txt  crop recommendation.docx  crop_recommendation (1).csv  crop_recommendation.py
static/assets/: crop_data.json
static/css/: style.css  styles.css
static/js/: charts.js  main.js
templates/: about.html  carbon_footprint.html  crop_encyclopedia.html  data_upload.html  equipment_guide.html  farming_calendar.html  index.html  irrigation_planner.html  layout.html  market_prices.html  pest_disease.html  pmkisan_checker.html  reverse_lookup.html  simple_index.html  simple_layout.html  soil_health.html  training_modules.html  weather_dashboard.html  yield_predictor.html
